--- a/Website Source/assets/css/style.css
+++ b/Website Source/assets/css/style.css
@@ -56,6 +56,79 @@ h1.inverse, h2.inverse, h3.inverse {
 
 #livemap {
     height:600px;
+    width:100%;
+
+}
+#mapWrap {
+    height:600px;
     width:90%;
-    margin:25px auto;
+    margin:auto;
+    position:relative;
+    overflow:hidden;
+}
+
+#map { margin-bottom:100px; }
+#map h2 {
+    margin:65px auto 50px auto;
+}
+
+.modal, .modal-backdrop {
+    position: absolute !important;
+}
+.modal-body {
+    text-align:center;
+    max-height:400px;
+    overflow-y:auto;
+}
+/* Checkbox Switch */
+.onoffswitch {
+    position: relative; width: 90px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.deliveryswitch-inner:before {
+    content: "YES"!important;
+}
+.deliveryswitch-inner:after {
+    content: "NO"!important;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 10px;
+    background-color: #34A7C1; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
 }
